# CG

./: CMakeLists.txt  main_lab34.cpp  test.cpp
all/: full_camera.cpp  main_lab1.cpp  main_lab2.cpp  main_lab34.cpp  polymesh_object.cpp  vector.h
assets/: plane.ply  teapot_smaller.ply
